fixed scrollbar appearing unnecessarily

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     color: white;
     font-family: 'Indie Flower', cursive;
     font-size: 130%;
+    overflow: hidden;
 }
 
 h1{
